# zui-voice

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
licenses/: OpenMDW-1.1.txt
patches/: parakeet-server-language.patch  parakeet-server-streaming.patch
scripts/: build-parakeet-runtime.ps1
src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts  ui.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/assets/: release-manifest.example.json  release-manifest.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  audio.rs  backend.rs  cancellation.rs  clipboard.rs  hotkey.rs  inference.rs  lib.rs  main.rs  models.rs  platform.rs  runtime.rs  settings.rs  subtitle_stabilizer.rs  subtitles.rs  types.rs
src-tauri/src/system_audio/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: KeyRecorder.tsx  Onboarding.test.tsx  Onboarding.tsx  Overlay.tsx  SubtitleOverlay.test.tsx  SubtitleOverlay.tsx
src/hooks/: useAppTheme.ts  useSubtitles.ts  useVoiceApp.ts
src/settings/: MacOverlayHeader.tsx  MicrophoneTestButton.tsx  Settings.tsx  SettingsControls.tsx  SettingsSidebar.tsx  types.ts
src/settings/sections/: AppearanceSettings.tsx  AudioSettings.tsx  DictationSettings.tsx  EngineSettings.tsx  LegalSettings.tsx  SubtitleSettings.test.tsx  SubtitleSettings.tsx
