[package]
name = "zui-voice"
version = "0.1.0"
description = "Private push-to-talk Vietnamese dictation"
authors = ["Zui"]
edition = "2021"

[lib]
name = "zui_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zui-voice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
clipboard-rs = "0.3.5"
cpal = "0.18.1"
futures-util = "0.3"
hex = "0.4"
hound = "3.5"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rdev = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
url = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
tempfile = "3"
